--- a/main.css
+++ b/main.css
@@ -75,3 +75,15 @@ font-family: 'Francois One', sans-serif;
     color: white;
     text-shadow:2px 2px black;
 }
+
+#f1{
+  width: 25%;
+  height: 40%;
+}
+
+#i1{
+  width: 70%;
+  height: 70%;
+  padding-left: 30%;
+
+}
