--- a/main.css
+++ b/main.css
@@ -1,31 +1,65 @@
-#header{
-  background-image: url("4.jpg");
-  background-color: black;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  -webkit-transition: background 3s ease-out;
-  -moz-transition: background 3s ease-out;
-  -o-transition: background 3s ease-out;
-  transition: background 3s ease-out;
-}
-@import url('https://fonts.googleapis.com/css?family=Francois+One');
-
-
-#wel{
-font-family: 'Francois One', sans-serif;
-  width: 50%;
-  height: 50%;
-  margin: auto;
-  position: relative;
-  padding-top: 20%;
-  text-align: center;
-  font-size: 150%;
-  color: white;
-  text-shadow:2px 2px black;
+*{
+    background-color: #b9ff4e;
 }
 
+
+#pgHeader{
+    background: black  url(Images/4.jpg)  no-repeat  ;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: background 3s ease-out;
+    -moz-transition: background 3s ease-out;
+    -o-transition: background 3s ease-out;
+    transition: background 3s ease-out;
+}
+
+
+
+#_1Paragraph{
+    @import url('https://fonts.googleapis.com/css?family=Francois+One');
+    font-family: 'Francois One', sans-serif;
+    width: 50%;
+    height: 50%;
+    margin: auto;
+    position: relative;
+    padding-top: 20%;
+    text-align: center;
+    font-size: 150%;
+    color: white;
+    text-shadow:2px 2px black;
+}
+
+#pgColumns{
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    margin-left: 30px;
+    list-style: none;
+    display: flex;
+    justify-content:space-around;
+    flex-direction: row;
+    flex-flow:  row wrap;
+}
+
+.pgColumn{
+    width: 20%;
+    height: 150px;
+    background-color: tomato;
+    padding: 5px;
+    margin-top: 10px;
+    margin-right: 5%;
+    line-height: 150px;
+    color: aliceblue;
+
+    font-weight: bold;
+    font-size: 3em;
+    text-align: center;
+    font-family: 'Francois One', sans-serif;
+}
+
+
+/*
 #sec{
   width: 100%;
   height: 25%;
