--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 #header{
-  background-image: url("4.jpg");
+  background-image: url("Images/4.jpg");
   background-color: black;
   background-repeat: no-repeat;
   background-size: cover;
@@ -86,7 +86,7 @@ font-family: 'Francois One', sans-serif;
   margin-top: auto;
   float:left;
   margin-left: 10%;
-  background-image: url('info.png');
+  background-image: url('Images/info.png');
   background-repeat: no-repeat;
   background-position: top;
   text-align: center;
@@ -98,7 +98,7 @@ font-family: 'Francois One', sans-serif;
   height: 25%;
   float:left;
   margin-left: 10%;
-  background-image: url('sha.png');
+  background-image: url('Images/sha.png');
   background-repeat: no-repeat;
   background-position: top;
   text-align: center;
@@ -110,7 +110,7 @@ font-family: 'Francois One', sans-serif;
   height: 25%;
   float:left;
   margin-left: 10%;
-  background-image: url('act.png');
+  background-image: url('Images/act.png');
   background-repeat: no-repeat;
   background-position: top;
   text-align: center;
