--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 #header{
-  background-image: url("Images/4.jpg");
+  background-image: url("Images\4.jpg");
   background-color: black;
   background-repeat: no-repeat;
   background-size: cover;
