--- a/main.css
+++ b/main.css
@@ -1,47 +1,46 @@
-#header{
-  background-image: url("Images/4.jpg");
-  background-color: black;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  -webkit-transition: background 3s ease-out;
-  -moz-transition: background 3s ease-out;
-  -o-transition: background 3s ease-out;
-  transition: background 3s ease-out;
+#header {
+    background-image: url("assets/images/4.jpg");
+    background-color: black;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: background 3s ease-out;
+    -moz-transition: background 3s ease-out;
+    -o-transition: background 3s ease-out;
+    transition: background 3s ease-out;
 }
+
 @import url('https://fonts.googleapis.com/css?family=Francois+One');
-
-
-#wel{
-font-family: 'Francois One', sans-serif;
-  width: 50%;
-  height: 50%;
-  margin: auto;
-  position: relative;
-  padding-top: 20%;
-  text-align: center;
-  font-size: 150%;
-  color: white;
-  text-shadow:2px 2px black;
+#wel {
+    font-family: 'Francois One', sans-serif;
+    width: 50%;
+    height: 50%;
+    margin: auto;
+    position: relative;
+    padding-top: 20%;
+    text-align: center;
+    font-size: 150%;
+    color: white;
+    text-shadow: 2px 2px black;
 }
 
-#sec{
-  width: 100%;
-  height: 25%;
-  background-color: white;
+#sec {
+    width: 100%;
+    height: 25%;
+    background-color: white;
 }
 
-#footer{
-  width: 100%;
-  height: 80%;
-  background-color: #F4F3F3;
-  margin-top: 10%;
-  padding-bottom: 15%;
+#footer {
+    width: 100%;
+    height: 80%;
+    background-color: #F4F3F3;
+    margin-top: 10%;
+    padding-bottom: 15%;
 }
 
-#footer h1{
-  font-family: 'Francois One', sans-serif;
+#footer h1 {
+    font-family: 'Francois One', sans-serif;
     width: 50%;
     height: 50%;
     margin: auto;
@@ -52,21 +51,20 @@ font-family: 'Francois One', sans-serif;
     color: black;
 }
 
-#footergdn{
-  width: 100%;
-  height: 25%;
-  background-color: red;
-  border-top: 1px solid black;
-
+#footergdn {
+    width: 100%;
+    height: 25%;
+    background-color: red;
+    border-top: 1px solid black;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-#wel2{
-  font-family: 'Francois One', sans-serif;
+#wel2 {
+    font-family: 'Francois One', sans-serif;
     width: 50%;
     height: 50%;
     margin: auto;
@@ -75,44 +73,44 @@ font-family: 'Francois One', sans-serif;
     text-align: center;
     font-size: 150%;
     color: white;
-    text-shadow:2px 2px black;
+    text-shadow: 2px 2px black;
 }
 
-#f1{
-  width: 20%;
-  height: 50%;
-  margin: auto;
-  position: relative;
-  margin-top: auto;
-  float:left;
-  margin-left: 10%;
-  background-image: url('Images/info.png');
-  background-repeat: no-repeat;
-  background-position: top;
-  text-align: center;
-  padding-top: 10%;
+#f1 {
+    width: 20%;
+    height: 50%;
+    margin: auto;
+    position: relative;
+    margin-top: auto;
+    float: left;
+    margin-left: 10%;
+    background-image: url('assets/images/info.png');
+    background-repeat: no-repeat;
+    background-position: top;
+    text-align: center;
+    padding-top: 10%;
 }
 
-#f2{
-  width: 20%;
-  height: 25%;
-  float:left;
-  margin-left: 10%;
-  background-image: url('Images/sha.png');
-  background-repeat: no-repeat;
-  background-position: top;
-  text-align: center;
-  padding-top: 10%;
+#f2 {
+    width: 20%;
+    height: 25%;
+    float: left;
+    margin-left: 10%;
+    background-image: url('assets/images/sha.png');
+    background-repeat: no-repeat;
+    background-position: top;
+    text-align: center;
+    padding-top: 10%;
 }
 
-#f3{
-  width: 20%;
-  height: 25%;
-  float:left;
-  margin-left: 10%;
-  background-image: url('Images/act.png');
-  background-repeat: no-repeat;
-  background-position: top;
-  text-align: center;
-  padding-top: 10%;
+#f3 {
+    width: 20%;
+    height: 25%;
+    float: left;
+    margin-left: 10%;
+    background-image: url('assets/images/act.png');
+    background-repeat: no-repeat;
+    background-position: top;
+    text-align: center;
+    padding-top: 10%;
 }
